# htmlmerger

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pull-request.yml  push-pypi.yml  push.yml
complex/: __init__.py  complex.py
docs/: htmlmerger.html  index.html
htmlmerger/: __init__.py  _version.py  htmlmerger.py
tests/: conftest.py  test_complex.py  test_htmlmerger.py
tests/data/: expected.html
tests/data/input/: f1.html  f2.html
