[metadata]
name = htmlmerger
description = A package allowing to merge all html files in a directory in a single file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Advestis/htmlmerger
author = Advestis
author_email = pythondev@advestis.com
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/Advestis/htmlmerger/issues
    Documentation = https://advestis.github.io/htmlmerger
    Source Code = https://github.com/Advestis/htmlmerger/

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
include = htmlmerger

[versioneer]
VCS = git
style = pep440
versionfile_source = htmlmerger/_version.py
versionfile_build = htmlmerger/_version.py
tag_prefix = v
parentdir_prefix = htmlmerger-